--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".AlbumActivity"/>
         <activity android:name=".PasscodeSetupActivity"/>
         <activity android:name=".CalculatorActivity"/>
     </application>
