Add new activity to Manifest, passing image paths through intent

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,7 @@
         <activity android:name=".AlbumActivity"/>
         <activity android:name=".PasscodeSetupActivity"/>
         <activity android:name=".CalculatorActivity"/>
+        <activity android:name=".MediaViewActivity"/>
     </application>
 
 </manifest>
