--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name=".PasscodeSetupActivity"/>
         <activity android:name=".CalculatorActivity"/>
         <activity android:name=".MediaViewActivity"/>
+        <activity android:name=".SettingsActivity"/>
     </application>
 
 </manifest>
