Add async function for loading album thumbnails. Fix build.gradle

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
+        buildConfig = true // Enable BuildConfig for custom fields
         viewBinding true
     }
     viewBinding {
