--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,10 +5,7 @@
     <!-- Devices running Android 12L (API level 32) or lower  -->
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-
-
     <!-- Devices running Android 13 (API level 33) or higher -->
-
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
 
@@ -34,10 +31,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AlbumActivity"/>
+        <activity
+            android:name=".AlbumActivity"
+            android:theme="@style/AppTheme"/>
         <activity android:name=".PasscodeSetupActivity"/>
         <activity android:name=".CalculatorActivity"/>
-        <activity android:name=".MediaViewActivity"/>
+        <activity
+            android:name=".MediaViewActivity"
+            android:theme="@style/AppTheme"/>
         <activity android:name=".SettingsActivity"/>
     </application>
 
