--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
         android:theme="@style/Theme.CalculatorSafe"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
@@ -35,14 +35,14 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".AlbumActivity"
+            android:name=".activities.AlbumActivity"
             android:theme="@style/AppTheme"/>
-        <activity android:name=".PasscodeSetupActivity"/>
-        <activity android:name=".CalculatorActivity"/>
+        <activity android:name=".activities.PasscodeSetupActivity"/>
+        <activity android:name=".activities.CalculatorActivity"/>
         <activity
-            android:name=".MediaViewActivity"
+            android:name=".activities.MediaViewActivity"
             android:theme="@style/AppTheme"/>
-        <activity android:name=".SettingsActivity"/>
+        <activity android:name=".activities.SettingsActivity"/>
     </application>
 
 </manifest>
