--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,8 @@ dependencies {
     implementation 'androidx.navigation:navigation-ui-ktx:2.8.5'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     kapt 'com.github.bumptech.glide:compiler:4.15.1'
+    implementation 'androidx.media3:media3-exoplayer:1.5.1'  // Media3 ExoPlayer
+    implementation 'androidx.media3:media3-ui:1.5.1'  // UI components (PlayerView)
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
