Refactor package name.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,7 +9,7 @@ android {
     compileSdk 35
 
     defaultConfig {
-        applicationId "com.example.calculatorsafe"
+        applicationId "com.appnovastudios.calculatorsafe"
         minSdk 31
         targetSdk 35
         versionCode 1
