--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
     <uses-permission android:name="android.permission.READ_MEDIA_IMAGES" />
     <uses-permission android:name="android.permission.READ_MEDIA_VIDEO" />
 
-    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
 
 
     <application
@@ -23,7 +24,7 @@
         android:theme="@style/Theme.CalculatorSafe"
         tools:targetApi="31">
         <activity
-            android:name=".activities.MainActivity"
+            android:name="com.appnovastudios.calculatorsafe.activities.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
@@ -36,7 +37,7 @@
             android:name=".activities.PasscodeSetupActivity"
             android:theme="@style/AppTheme"/>
         <activity
-            android:name=".activities.CalculatorActivity"
+            android:name="com.appnovastudios.calculatorsafe.activities.CalculatorActivity"
             android:theme="@style/AppTheme"
             android:exported="true">
             <intent-filter>
